k8s/apps/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: n8n
    app.kubernetes.io/name: n8n
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
      app.kubernetes.io/name: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: n8n
        app.kubernetes.io/name: n8n
    spec:
      containers:
        - args:
            - -c
            - n8n start
          command:
            - /bin/sh
          image: n8nio/n8n:1.121.2
          name: n8n
          ports:
            - containerPort: 5678
          resources:
            limits:
              memory: 500Mi
            requests:
              memory: 250Mi
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - all
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: data
            - mountPath: /home/node/.cache
              name: cache
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: n8n
        - emptyDir: {}
          name: cache
