k8s/apps/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: n8n
    app.kubernetes.io/name: n8n
  name: n8n
  namespace: n8n
spec:
  ports:
    - name: http
      port: 5678
      protocol: TCP
      targetPort: 5678
  selector:
    app: n8n
    app.kubernetes.io/name: n8n
  type: ClusterIP
